fix response user and role test